# platform-cpp-sdk

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
libs/: CMakeLists.txt
libs/EnjinPlatformSdk/: CMakeLists.txt  Config.cmake.in
libs/EnjinPlatformSdk/include/EnjinPlatformSdk/: Account.hpp  AccountFragment.hpp  AccountRequest.hpp  AccountRequestFragment.hpp  AccountVerified.hpp  AccountVerifiedFragment.hpp  AcknowledgeEvents.hpp  ApproveCollection.hpp  ApproveToken.hpp  Attribute.hpp  AttributeFragment.hpp  AttributeInput.hpp  Balances.hpp  BalancesFragment.hpp  BatchMint.hpp  BatchSetAttribute.hpp  BatchTransfer.hpp  Block.hpp  BlockFragment.hpp  Burn.hpp  BurnParamsInput.hpp  Collection.hpp  CollectionAccount.hpp  CollectionAccountApproval.hpp  CollectionAccountApprovalFragment.hpp  CollectionAccountFragment.hpp  CollectionFragment.hpp  CollectionMutationInput.hpp  Connection.hpp  ConnectionFragment.hpp  ConnectionState.hpp  CoreMutations.hpp  CoreQueries.hpp  CoreSchema.hpp  CoreTypes.hpp  CreateCollection.hpp  CreateToken.hpp  CreateTokenParams.hpp  CreateWallet.hpp  CryptoSignatureType.hpp  (+143 more)
libs/EnjinPlatformSdk/src/: CMakeLists.txt  JsonDeserializableBase.cpp  JsonUtil.cpp  JsonValue.cpp
libs/EnjinPlatformSdk/src/event/: CMakeLists.txt  EventListenerRegistration.cpp  GlobalEvents.cpp  PlatformEvent.cpp  SubstrateEvents.cpp
libs/EnjinPlatformSdk/src/graphql/: CMakeLists.txt  GraphQlBatchResponse.cpp  GraphQlError.cpp  GraphQlErrorLocation.cpp  GraphQlUploadHolder.cpp
libs/EnjinPlatformSdk/src/include/: CoreUtil.hpp  FileUtil.hpp  HttpLoggingHandler.hpp  IPusherClient.hpp  IPusherEventServiceImpl.hpp  ISubscriptionListener.hpp  PusherClient.hpp  PusherConnectionState.hpp  PusherConstants.hpp  PusherErrorCodes.hpp  PusherEvent.hpp  PusherException.hpp  PusherListener.hpp  PusherOptions.hpp  RapidJsonUtil.hpp  StringUtil.hpp
libs/EnjinPlatformSdk/src/json/: CMakeLists.txt  JsonObject.cpp  JsonValue.cpp
libs/EnjinPlatformSdk/src/model/: Account.cpp  AccountRequest.cpp  AccountVerified.cpp  Attribute.cpp  AttributeInput.cpp  Balances.cpp  Block.cpp  BurnParamsInput.cpp  CMakeLists.txt  Collection.cpp  CollectionAccount.cpp  CollectionAccountApproval.cpp  CollectionMutationInput.cpp  CreateTokenParams.cpp  CryptoSignatureType.cpp  EncodableTokenIdInput.cpp  Erc1155EncoderInput.cpp  Event.cpp  EventParam.cpp  FreezeState.cpp  FreezeType.cpp  MarketPolicy.cpp  MintPolicy.cpp  MintRecipient.cpp  MintTokenParams.cpp  MultiTokenIdInput.cpp  MutateRoyaltyInput.cpp  OperatorTransferParams.cpp  PalletIdentifier.cpp  PendingEvents.cpp  Royalty.cpp  RoyaltyInput.cpp  SerializableInt.cpp  SimpleTransferParams.cpp  Token.cpp  TokenAccount.cpp  TokenAccountApproval.cpp  TokenAccountNamedReserve.cpp  TokenMarketBehaviorInput.cpp  TokenMintCap.cpp  (+10 more)
libs/EnjinPlatformSdk/src/platform/: CMakeLists.txt  HttpLoggingHandler.cpp  MultipartFormData.cpp  PlatformClient.cpp  PlatformRequest.cpp
libs/EnjinPlatformSdk/src/pusher/: PusherClient.cpp  PusherEvent.cpp  PusherException.cpp  PusherOptions.cpp
libs/EnjinPlatformSdk/src/schema/: CMakeLists.txt  CoreMutations.cpp  CoreQueries.cpp  CoreSchema.cpp
libs/EnjinPlatformSdk/src/util/: CMakeLists.txt  CoreUtil.cpp  FileUtil.cpp  RapidJsonUtil.cpp  StringUtil.cpp
libs/EnjinPlatformSdkBeam/: CMakeLists.txt  Config.cmake.in
libs/EnjinPlatformSdkBeam/src/: CMakeLists.txt  Class.cpp
libs/EnjinPlatformSdkFuelTanks/: CMakeLists.txt  Config.cmake.in
libs/EnjinPlatformSdkFuelTanks/src/: CMakeLists.txt
libs/EnjinPlatformSdkMarketplace/: CMakeLists.txt  Config.cmake.in
libs/EnjinPlatformSdkMarketplace/src/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/Test Data/: CMakeLists.txt  d.txt
tests/fake/: CMakeLists.txt  FakeJsonDeserializable.cpp  FakePlatformRequest.cpp
tests/include/: FakeJsonDeserializable.hpp  FakePlatformRequest.hpp  IMockWebSocketServer.hpp  MockEventListener.hpp  MockEventListenerRegistration.hpp  MockGraphQlFragment.hpp  MockHttpServer.hpp  MockJsonSerializable.hpp  MockLogger.hpp  MockPlatformRequest.hpp  MockPusherEventServiceImpl.hpp  MockSerializable.hpp  MockStringSerializable.hpp  MockSubscriptionListener.hpp  MockWebSocketServer.hpp  Request.hpp  RequestMessage.hpp  Response.hpp  ResponseMessage.hpp  ResponseProvider.hpp  TestDataTestSuite.hpp  VerificationTestSuite.hpp  WebSocketMessage.hpp  WebSocketMessageType.hpp
tests/mock/: CMakeLists.txt  MockHttpServer.cpp  MockWebSocketServer.cpp  Request.cpp  RequestMessage.cpp  Response.cpp  ResponseMessage.cpp  ResponseProvider.cpp  WebSocketMessage.cpp
tests/suite/: CMakeLists.txt  TestDataTestSuite.cpp  VerificationTestSuite.cpp
tests/unit/: CMakeLists.txt  JsonUtilTest.cpp  JsonValueTest.cpp
tests/unit/graphql/: CMakeLists.txt  GraphQlFragmentTest.cpp  GraphQlParameterHolderTest.cpp  GraphQlParameterTest.cpp  GraphQlRequestBaseTest.cpp  GraphQlResponseTest.cpp  GraphQlUploadHolderTest.cpp  ObjectGraphQlRequestTest.cpp  ScalarGraphQlRequestTest.cpp
tests/unit/json/: CMakeLists.txt  JsonDeserializableBaseTest.cpp  JsonObjectTest.cpp  JsonUtilTest.cpp  JsonValueArrayTest.cpp  JsonValueBoolTest.cpp  JsonValueDoubleTest.cpp  JsonValueFloatTest.cpp  JsonValueIntegerTest.cpp  JsonValueObjectTest.cpp  JsonValueStringTest.cpp  JsonValueTest.cpp
tests/unit/model/: BeamFlagInputTypeTest.cpp  BeamFlagTest.cpp  BeamTypeTest.cpp  CMakeLists.txt  ClaimStatusTest.cpp  ClaimTokenTest.cpp  CryptoSignatureTypeTest.cpp  FeeSideTest.cpp  FreezeTypeTest.cpp  ListingStateEnumTest.cpp  ListingTypeTest.cpp  PalletIdentifierTest.cpp  SerializableArrayTest.cpp  TokenMintCapTest.cpp  TokenMintCapTypeTest.cpp  TransactionMethodTest.cpp  TransactionResultTest.cpp  TransactionStateTest.cpp
tests/unit/platform/: CMakeLists.txt  HttpLoggingHandlerTest.cpp  PlatformClientTest.cpp  PlatformRequestTest.cpp  PlatformResponseTest.cpp
tests/unit/pusher/: CMakeLists.txt  PusherClientReconnectTest.cpp  PusherClientTest.cpp  PusherEventTest.cpp
tests/unit/util/: CMakeLists.txt  FileUtilTest.cpp  RapidJsonUtilTest.cpp  StringUtilTest.cpp
(+1303 files in other folders)
